--- a/index.html
+++ b/index.html
@@ -262,17 +262,18 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>Powerful <span>3D Workflow</span> Tools</h1>
+            <h1>Powerful <span>Texture Maps</span> Generator</h1>
             <p class="subtitle">Streamline your Blender workflow with intelligent automation and one-click operations.</p>
         </div>
 
         <!-- Hero Screenshot -->
-        <div class="hero-image">
+        <!--<div class="hero-image">
             <div class="image-placeholder">
                 <svg viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="M21 15l-5-5L5 21"/></svg>
                 <span>Main Interface Screenshot (1920×1080)</span>
             </div>
-        </div>
+        </div>-->
+        <img src="https://yourusername.github.io/your-repo/images/hero.png" alt="Main Interface">
 
         <!-- Features -->
         <div class="section-title">KEY FEATURES</div>
