--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <span>Main Interface Screenshot (1920×1080)</span>
             </div>
         </div>-->
-        <img src="https://lionit.github.io/3Dquads-Product-Pages/images/hero.png" alt="Main Interface">
+        <img class="hero-image" src="https://lionit.github.io/3Dquads-Product-Pages/images/hero.png" alt="Main Interface">
 
         <!-- Features -->
         <div class="section-title">KEY FEATURES</div>
