--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -948,7 +948,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <a href="#" class="logo">
-                <div class="logo-icon"><img src="Logo.png" alt="Logo"></div>
+                <div class="logo-icon"><img src="/images/Logo.png" alt="Logo"></div>
                 Craftsman <span>Cabinet Creator</span>
             </a>
             <ul class="nav-links">
