--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -948,7 +948,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <a href="#" class="logo">
-                <div class="logo-icon"><img src="/images/Logo.png" alt="Logo"></div>
+                <div class="logo-icon"><img src="../images/Logo.png" alt="Logo"></div>
                 Craftsman <span>Cabinet Creator</span>
             </a>
             <ul class="nav-links">
@@ -1029,7 +1029,7 @@
             <!-- Screenshot: Overview/Hero Image -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Craftsman Cabinet Creator interface">
+                    <img src="../images/Logo.png" alt="Craftsman Cabinet Creator interface">
                 </div>
                 <div class="screenshot-caption">The Craftsman Cabinet Creator panel in Blender's 3D Viewport sidebar showing a generated cabinet with customizable parameters.</div>
             </div>
@@ -1106,7 +1106,7 @@
             <!-- Screenshot: Features showcase -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Cabinet with drawers, shelves, and side panels">
+                    <img src="../images/Logo.png" alt="Cabinet with drawers, shelves, and side panels">
                 </div>
                 <div class="screenshot-caption">A complete cabinet setup showing the Cabinet Generator with added drawers, fixed shelves, and side panels.</div>
             </div>
@@ -1140,7 +1140,7 @@
                         <!-- Screenshot: Blender Preferences -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="Logo.png" alt="Blender Preferences">
+                                <img src="../images/Logo.png" alt="Blender Preferences">
                             </div>
                         </div>
                     </div>
@@ -1154,7 +1154,7 @@
                         <!-- Screenshot: Extensions tab -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="Logo.png" alt="Extensions tab">
+                                <img src="../images/Logo.png" alt="Extensions tab">
                             </div>
                         </div>
                     </div>
@@ -1168,7 +1168,7 @@
                         <!-- Screenshot: File browser -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="Logo.png" alt="File browser">
+                                <img src="../images/Logo.png" alt="File browser">
                             </div>
                         </div>
                     </div>
@@ -1182,7 +1182,7 @@
                         <!-- Screenshot: Installed extension -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="Logo.png" alt="Extension installed">
+                                <img src="../images/Logo.png" alt="Extension installed">
                             </div>
                         </div>
                     </div>
@@ -1260,7 +1260,7 @@
                         <!-- Screenshot: Before/After cabinet generator -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="Logo.png" alt="Before and after applying Cabinet Generator">
+                                <img src="../images/Logo.png" alt="Before and after applying Cabinet Generator">
                             </div>
                             <div class="screenshot-caption">Left: Default cube. Right: After applying Craftsman Cabinet Creator.</div>
                         </div>
@@ -1309,7 +1309,7 @@
             <!-- Screenshot: Full panel layout -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Full panel layout">
+                    <img src="../images/Logo.png" alt="Full panel layout">
                 </div>
                 <div class="screenshot-caption">The complete Craftsman Cabinet Creator panel showing all buttons and parameter sections.</div>
             </div>
@@ -1353,7 +1353,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Expanded parameters -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Expanded parameter panels">
+                    <img src="../images/Logo.png" alt="Expanded parameter panels">
                 </div>
                 <div class="screenshot-caption">Example of expanded parameter panels showing the three-level hierarchy.</div>
             </div>
@@ -1370,7 +1370,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Multiple drawers -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Cabinet with multiple drawers">
+                    <img src="../images/Logo.png" alt="Cabinet with multiple drawers">
                 </div>
                 <div class="screenshot-caption">A cabinet with multiple drawer instances, each with independent parameters.</div>
             </div>
@@ -1554,7 +1554,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Different parameter types -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="Logo.png" alt="Various parameter types">
+                    <img src="../images/Logo.png" alt="Various parameter types">
                 </div>
                 <div class="screenshot-caption">Examples of different parameter types: sliders, checkboxes, color pickers, and material selectors.</div>
             </div>
