--- a/pages/product.html
+++ b/pages/product.html
@@ -1128,7 +1128,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <a href="#" class="logo">
-                <div class="logo-icon"><img src="Logo.png" alt="Logo"></div>
+                <div class="logo-icon"><img src="../images/../images/Logo.png" alt="Logo"></div>
                 Craftsman <span>Cabinet Creator</span>
             </a>
             <ul class="nav-links">
@@ -1180,7 +1180,7 @@
             <div class="hero-visual">
                 <div class="hero-image-container">
                     <div style="aspect-ratio: 16/10;">
-                        <img src="Logo.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
+                        <img src="../images/../images/Logo.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
                     </div>
                 </div>
 
@@ -1264,7 +1264,7 @@
             <div class="showcase-grid">
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="Logo.png" alt="Kitchen Cabinets" class="logo-image-cover">
+                        <img src="../images/../images/Logo.png" alt="Kitchen Cabinets" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Kitchen Cabinets</h3>
@@ -1274,7 +1274,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="Logo.png" alt="Bathroom Vanities" class="logo-image-cover">
+                        <img src="../images/../images/Logo.png" alt="Bathroom Vanities" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Bathroom Vanities</h3>
@@ -1284,7 +1284,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="Logo.png" alt="Office Storage" class="logo-image-cover">
+                        <img src="../images/Logo.png" alt="Office Storage" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Office Storage</h3>
@@ -1294,7 +1294,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="Logo.png" alt="Custom Furniture" class="logo-image-cover">
+                        <img src="../images/Logo.png" alt="Custom Furniture" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Custom Furniture</h3>
@@ -1324,7 +1324,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="Logo.png" alt="Parametric Control" class="logo-image-feature">
+                            <img src="../images/Logo.png" alt="Parametric Control" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1346,7 +1346,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="Logo.png" alt="Drawer System" class="logo-image-feature">
+                            <img src="../images/Logo.png" alt="Drawer System" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1368,7 +1368,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="Logo.png" alt="Non-Destructive Workflow" class="logo-image-feature">
+                            <img src="../images/Logo.png" alt="Non-Destructive Workflow" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1390,7 +1390,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="Logo.png" alt="Material UV Mapping" class="logo-image-feature">
+                            <img src="../images/Logo.png" alt="Material UV Mapping" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1410,7 +1410,7 @@
             <div class="gallery-grid">
                 <div class="gallery-item featured">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Featured Project" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Featured Project" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View Project</span>
@@ -1419,7 +1419,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Gallery Project 1" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Gallery Project 1" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1428,7 +1428,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Gallery Project 2" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Gallery Project 2" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1437,7 +1437,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Gallery Project 3" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Gallery Project 3" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1446,7 +1446,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Gallery Project 4" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Gallery Project 4" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1455,7 +1455,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="Logo.png" alt="Gallery Project 5" class="logo-image-gallery">
+                        <img src="../images/Logo.png" alt="Gallery Project 5" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
