--- a/pages/product.html
+++ b/pages/product.html
@@ -1128,7 +1128,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <a href="#" class="logo">
-                <div class="logo-icon"><img src="../images/../images/Logo.png" alt="Logo"></div>
+                <div class="logo-icon"><img src="../images/Logo.png" alt="Logo"></div>
                 Craftsman <span>Cabinet Creator</span>
             </a>
             <ul class="nav-links">
@@ -1180,7 +1180,7 @@
             <div class="hero-visual">
                 <div class="hero-image-container">
                     <div style="aspect-ratio: 16/10;">
-                        <img src="../images/../images/Logo.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
+                        <img src="../images/Logo.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
                     </div>
                 </div>
 
@@ -1264,7 +1264,7 @@
             <div class="showcase-grid">
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/../images/Logo.png" alt="Kitchen Cabinets" class="logo-image-cover">
+                        <img src="../images/Logo.png" alt="Kitchen Cabinets" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Kitchen Cabinets</h3>
@@ -1274,7 +1274,7 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/../images/Logo.png" alt="Bathroom Vanities" class="logo-image-cover">
+                        <img src="../images/Logo.png" alt="Bathroom Vanities" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Bathroom Vanities</h3>
