--- a/pages/product.html
+++ b/pages/product.html
@@ -1180,7 +1180,7 @@
             <div class="hero-visual">
                 <div class="hero-image-container">
                     <div style="aspect-ratio: 16/10;">
-                        <img src="../images/Logo.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
+                        <img src="../images/12.jpg" alt="Craftsman Cabinet Creator" class="logo-image-hero">
                     </div>
                 </div>
 
@@ -1264,7 +1264,7 @@
             <div class="showcase-grid">
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/Logo.png" alt="Kitchen Cabinets" class="logo-image-cover">
+                        <img src="../images/19.jpg" alt="Kitchen Cabinets" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Kitchen Cabinets</h3>
@@ -1274,27 +1274,27 @@
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/Logo.png" alt="Bathroom Vanities" class="logo-image-cover">
+                        <img src="../images/12.jpg" alt="Bedroom Built-in" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
-                        <h3 class="showcase-title">Bathroom Vanities</h3>
-                        <p class="showcase-desc">Custom vanity units with integrated storage solutions</p>
+                        <h3 class="showcase-title">Bedroom Built-in</h3>
+                        <p class="showcase-desc">Custom built-in units with integrated storage solutions</p>
                     </div>
                 </div>
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/Logo.png" alt="Office Storage" class="logo-image-cover">
+                        <img src="../images/13.png" alt="Curio Cabinet" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
-                        <h3 class="showcase-title">Office Storage</h3>
-                        <p class="showcase-desc">Professional storage systems for modern workspaces</p>
+                        <h3 class="showcase-title">Curio Cabinet</h3>
+                        <p class="showcase-desc">Specifically designed to display collectibles</p>
                     </div>
                 </div>
 
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/Logo.png" alt="Custom Furniture" class="logo-image-cover">
+                        <img src="../images/15.jpg" alt="Custom Furniture" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Custom Furniture</h3>
@@ -1346,7 +1346,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="../images/Logo.png" alt="Drawer System" class="logo-image-feature">
+                            <img src="../images/7.png" alt="Drawer System" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1368,7 +1368,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="../images/Logo.png" alt="Non-Destructive Workflow" class="logo-image-feature">
+                            <img src="../images/1.png" alt="Non-Destructive Workflow" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1390,7 +1390,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="../images/Logo.png" alt="Material UV Mapping" class="logo-image-feature">
+                            <img src="../images/3.png" alt="Material UV Mapping" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
@@ -1410,7 +1410,7 @@
             <div class="gallery-grid">
                 <div class="gallery-item featured">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Featured Project" class="logo-image-gallery">
+                        <img src="../images/12.jpg" alt="Featured Project" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View Project</span>
@@ -1419,7 +1419,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Gallery Project 1" class="logo-image-gallery">
+                        <img src="../images/13.png" alt="Gallery Project 1" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1428,7 +1428,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Gallery Project 2" class="logo-image-gallery">
+                        <img src="../images/15.jpg" alt="Gallery Project 2" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1437,7 +1437,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Gallery Project 3" class="logo-image-gallery">
+                        <img src="../images/17.jpg" alt="Gallery Project 3" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1446,7 +1446,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Gallery Project 4" class="logo-image-gallery">
+                        <img src="../images/19.jpg.png" alt="Gallery Project 4" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
@@ -1455,7 +1455,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/Logo.png" alt="Gallery Project 5" class="logo-image-gallery">
+                        <img src="../images/14.jpg" alt="Gallery Project 5" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
