--- a/pages/product.html
+++ b/pages/product.html
@@ -1446,7 +1446,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/19.jpg.png" alt="Gallery Project 4" class="logo-image-gallery">
+                        <img src="../images/19.jpg" alt="Gallery Project 4" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
