--- a/pages/product.html
+++ b/pages/product.html
@@ -1324,7 +1324,7 @@
                 <div class="feature-block-visual">
                     <div class="feature-block-image">
                         <div style="aspect-ratio: 4/3;">
-                            <img src="../images/Logo.png" alt="Parametric Control" class="logo-image-feature">
+                            <img src="../images/10.png" alt="Parametric Control" class="logo-image-feature">
                         </div>
                     </div>
                 </div>
