Replace hero image with a new image file

--- a/pages/product.html
+++ b/pages/product.html
@@ -1180,7 +1180,7 @@
             <div class="hero-visual">
                 <div class="hero-image-container">
                     <div style="aspect-ratio: 16/10;">
-                        <img src="../images/12.jpg" alt="Craftsman Cabinet Creator" class="logo-image-hero">
+                        <img src="../images/11.png" alt="Craftsman Cabinet Creator" class="logo-image-hero">
                     </div>
                 </div>
 
