--- a/pages/product.html
+++ b/pages/product.html
@@ -1145,7 +1145,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Create Stunning Cabinets <span>in Seconds</span></h1>
+                <h1>Spend less time building boxes, and more time <span>designing spaces</span></h1>
                 <p class="hero-tagline">Professional parametric cabinet generation powered by Geometry Nodes. Design, customize, and export production-ready cabinet geometry directly in Blender.</p>
 
                 <div class="hero-features">
