--- a/pages/product.html
+++ b/pages/product.html
@@ -1264,7 +1264,7 @@
             <div class="showcase-grid">
                 <div class="showcase-item">
                     <div class="showcase-image">
-                        <img src="../images/19.jpg" alt="Kitchen Cabinets" class="logo-image-cover">
+                        <img src="../images/19.jpeg" alt="Kitchen Cabinets" class="logo-image-cover">
                     </div>
                     <div class="showcase-overlay">
                         <h3 class="showcase-title">Kitchen Cabinets</h3>
@@ -1446,7 +1446,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/19.jpg" alt="Gallery Project 4" class="logo-image-gallery">
+                        <img src="../images/19.jpeg" alt="Gallery Project 4" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
