--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -1106,7 +1106,7 @@
             <!-- Screenshot: Features showcase -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/Logo.png" alt="Cabinet with drawers, shelves, and side panels">
+                    <img src="../images/12.jpg" alt="Cabinet with drawers, shelves, and side panels">
                 </div>
                 <div class="screenshot-caption">A complete cabinet setup showing the Cabinet Generator with added drawers, fixed shelves, and side panels.</div>
             </div>
