--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -1029,7 +1029,7 @@
             <!-- Screenshot: Overview/Hero Image -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/11.png" alt="Craftsman Cabinet Creator interface">
+                    <img src="../images/11_old.png" alt="Craftsman Cabinet Creator interface">
                 </div>
                 <div class="screenshot-caption">The Craftsman Cabinet Creator panel in Blender's 3D Viewport sidebar showing a generated cabinet with customizable parameters.</div>
             </div>
