--- a/pages/product.html
+++ b/pages/product.html
@@ -1217,7 +1217,7 @@
                             <img src="../images/avatar-3dquads.png" alt="3DQuads">
                         </a>
                         <a href="https://cgcookie.com/courses/craftsman-precision-modeling-with-blender-for-real-world-application" target="_blank" rel="noopener noreferrer" class="creator-avatar" title="Sascha">
-                            <img src="../images/avatar-sascha.png" alt="Sascha">
+                            <img src="../images/avatar-sascha.jpg" alt="Sascha">
                         </a>
                     </div>
                 </div>
