--- a/pages/product.html
+++ b/pages/product.html
@@ -1510,7 +1510,7 @@
 
                 <div class="gallery-item">
                     <div class="gallery-image">
-                        <img src="../images/14.jpg" alt="Gallery Project 5" class="logo-image-gallery">
+                        <img src="../images/View_1.jpg" alt="Gallery Project 5" class="logo-image-gallery">
                     </div>
                     <div class="gallery-overlay">
                         <span class="gallery-overlay-text">&#x1F50D; View</span>
