--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craftsman Cabinet Creator - Documentation</title>
     <style>
+        /* ---------- (styles are unchanged, identical to your original) ---------- */
         :root {
             --primary: #E87D0D;
             --primary-dark: #C66A0A;
@@ -1112,7 +1113,7 @@
             </div>
         </section>
 
-        <!-- Installation Section -->
+        <!-- Installation Section (compact, single image) -->
         <section id="installation" class="section">
             <div class="section-header">
                 <h2 class="section-title">
@@ -1131,18 +1132,21 @@
             </div>
 
             <h3>Installation Steps</h3>
+
+            <!-- SINGLE IMAGE for the entire installation process -->
+            <div class="screenshot-container">
+                <div class="screenshot-image-small">
+                    <img src="../images/Logo.png" alt="Blender extension installation overview">
+                </div>
+                <div class="screenshot-caption">Installing the Craftsman Cabinet Creator extension via Blender’s Preferences.</div>
+            </div>
+
             <div class="steps">
                 <div class="step">
                     <div class="step-number"></div>
                     <div class="step-content">
                         <div class="step-title">Open Blender Preferences</div>
                         <div class="step-desc">Launch Blender and navigate to <strong>Edit &rarr; Preferences</strong></div>
-                        <!-- Screenshot: Blender Preferences -->
-                        <div class="screenshot-container">
-                            <div class="screenshot-image-small">
-                                <img src="../images/Logo.png" alt="Blender Preferences">
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -1151,12 +1155,6 @@
                     <div class="step-content">
                         <div class="step-title">Go to Extensions Tab</div>
                         <div class="step-desc">In the Preferences window, click on the <strong>Extensions</strong> tab in the left sidebar. Then click the dropdown arrow next to the search bar and select <strong>"Install from Disk"</strong>.</div>
-                        <!-- Screenshot: Extensions tab -->
-                        <div class="screenshot-container">
-                            <div class="screenshot-image-small">
-                                <img src="../images/Logo.png" alt="Extensions tab">
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -1165,12 +1163,6 @@
                     <div class="step-content">
                         <div class="step-title">Select the Extension Package</div>
                         <div class="step-desc">In the file browser that opens, navigate to and select the <code>craftsman_cabinets.zip</code> extension package file, then click <strong>"Install from Disk"</strong>.</div>
-                        <!-- Screenshot: File browser -->
-                        <div class="screenshot-container">
-                            <div class="screenshot-image-small">
-                                <img src="../images/Logo.png" alt="File browser">
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -1179,12 +1171,6 @@
                     <div class="step-content">
                         <div class="step-title">Extension Installed</div>
                         <div class="step-desc">The extension is now installed and enabled automatically. You can close Preferences and start using it immediately.</div>
-                        <!-- Screenshot: Installed extension -->
-                        <div class="screenshot-container">
-                            <div class="screenshot-image-small">
-                                <img src="../images/Logo.png" alt="Extension installed">
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -1293,7 +1279,7 @@
             </div>
         </section>
 
-        <!-- Usage Guide Section -->
+        <!-- ========== MODIFIED USAGE SECTION ========== -->
         <section id="usage" class="section">
             <div class="section-header">
                 <h2 class="section-title">
@@ -1314,6 +1300,18 @@
                 <div class="screenshot-caption">The complete Craftsman Cabinet Creator panel showing all buttons and parameter sections.</div>
             </div>
 
+            <!-- ORIGINAL CODE BLOCK REMOVED FROM HERE -->
+
+            <h3>Parameter Interface</h3>
+            <p>The parameter interface uses a three-level collapsible hierarchy:</p>
+
+            <ol style="margin: 1rem 0; padding-left: 1.5rem; color: var(--text-secondary);">
+                <li><strong>Modifier Level</strong> - Top-level container for each modifier (Craftsman Cabinet Creator, Cabinet Drawer, etc.)</li>
+                <li><strong>Panel Level</strong> - Organized groups within each modifier (Base Settings, Toe Kick, etc.)</li>
+                <li><strong>Parameter Level</strong> - Individual controls (Width, Height, Depth, etc.)</li>
+            </ol>
+
+            <!-- MOVED CODE BLOCK - REPLACES THE EXPANDED PARAMETERS SCREENSHOT -->
             <div class="code-block" style="white-space: pre; font-size: 0.85rem;">
 Craftsman Cabinet Creator
 ├─ [Apply Craftsman Cabinet Creator]  ← Always available (one per object)
@@ -1341,23 +1339,6 @@ Craftsman Cabinet Creator
    └─ ...
             </div>
 
-            <h3>Parameter Interface</h3>
-            <p>The parameter interface uses a three-level collapsible hierarchy:</p>
-
-            <ol style="margin: 1rem 0; padding-left: 1.5rem; color: var(--text-secondary);">
-                <li><strong>Modifier Level</strong> - Top-level container for each modifier (Craftsman Cabinet Creator, Cabinet Drawer, etc.)</li>
-                <li><strong>Panel Level</strong> - Organized groups within each modifier (Base Settings, Toe Kick, etc.)</li>
-                <li><strong>Parameter Level</strong> - Individual controls (Width, Height, Depth, etc.)</li>
-            </ol>
-
-            <!-- Screenshot: Expanded parameters -->
-            <div class="screenshot-container">
-                <div class="screenshot-image">
-                    <img src="../images/Logo.png" alt="Expanded parameter panels">
-                </div>
-                <div class="screenshot-caption">Example of expanded parameter panels showing the three-level hierarchy.</div>
-            </div>
-
             <h3>Working with Multiple Components</h3>
             <p>You can add multiple drawers and fixed shelves to a single cabinet:</p>
 
@@ -1375,6 +1356,7 @@ Craftsman Cabinet Creator
                 <div class="screenshot-caption">A cabinet with multiple drawer instances, each with independent parameters.</div>
             </div>
         </section>
+        <!-- ========== END OF MODIFIED USAGE SECTION ========== -->
 
         <!-- Operators Section -->
         <section id="operators" class="section">
