--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -1136,7 +1136,7 @@
             <!-- SINGLE IMAGE for the entire installation process -->
             <div class="screenshot-container">
                 <div class="screenshot-image-small">
-                    <img src="../images/Logo.png" alt="Blender extension installation overview">
+                    <img src="../images/Install.png" alt="Blender extension installation overview">
                 </div>
                 <div class="screenshot-caption">Installing the Craftsman Cabinet Creator extension via Blender’s Preferences.</div>
             </div>
@@ -1246,7 +1246,7 @@
                         <!-- Screenshot: Before/After cabinet generator -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="../images/Logo.png" alt="Before and after applying Cabinet Generator">
+                                <img src="../images/apply.png" alt="Before and after applying Cabinet Generator">
                             </div>
                             <div class="screenshot-caption">Left: Default cube. Right: After applying Craftsman Cabinet Creator.</div>
                         </div>
@@ -1295,7 +1295,7 @@
             <!-- Screenshot: Full panel layout -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/Logo.png" alt="Full panel layout">
+                    <img src="../images/1.png" alt="Full panel layout">
                 </div>
                 <div class="screenshot-caption">The complete Craftsman Cabinet Creator panel showing all buttons and parameter sections.</div>
             </div>
@@ -1351,7 +1351,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Multiple drawers -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/Logo.png" alt="Cabinet with multiple drawers">
+                    <img src="../images/Settings_2.png" alt="Cabinet with multiple drawers">
                 </div>
                 <div class="screenshot-caption">A cabinet with multiple drawer instances, each with independent parameters.</div>
             </div>
@@ -1536,7 +1536,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Different parameter types -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/Logo.png" alt="Various parameter types">
+                    <img src="../images/4.png" alt="Various parameter types">
                 </div>
                 <div class="screenshot-caption">Examples of different parameter types: sliders, checkboxes, color pickers, and material selectors.</div>
             </div>
