--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -1351,7 +1351,7 @@ Craftsman Cabinet Creator
             <!-- Screenshot: Multiple drawers -->
             <div class="screenshot-container">
                 <div class="screenshot-image">
-                    <img src="../images/Settings_2.png" alt="Cabinet with multiple drawers">
+                    <img src="../images/settings_1.png" alt="Cabinet with multiple drawers">
                 </div>
                 <div class="screenshot-caption">A cabinet with multiple drawer instances, each with independent parameters.</div>
             </div>
