--- a/pages/product.html
+++ b/pages/product.html
@@ -1239,7 +1239,7 @@
                     <span class="hero-creators-label">Created by</span>
                     <div class="hero-creators-avatars">
                         <a href="https://cgcookie.com/courses/craftsman-precision-modeling-with-blender-for-real-world-application" target="_blank" rel="noopener noreferrer" class="creator-avatar" title="SFE-VIZ">
-                            <img src="../images/SFE_VIZ_logo.png" alt="SFE-VIZ logo">
+                            <img src="../images/avatar-sascha.jpg" alt="SFE-VIZ logo">
                         </a>
                         <a href="https://superhivemarket.com/creators/3dquads" target="_blank" rel="noopener noreferrer" class="creator-avatar" title="3DQuads">
                             <img src="../images/avatar-3dquads.png" alt="3DQuads">
