--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -1246,7 +1246,7 @@
                         <!-- Screenshot: Before/After cabinet generator -->
                         <div class="screenshot-container">
                             <div class="screenshot-image-small">
-                                <img src="../images/apply.png" alt="Before and after applying Cabinet Generator">
+                                <img src="../images/Apply_Generator.jpg" alt="Before and after applying Cabinet Generator">
                             </div>
                             <div class="screenshot-caption">Left: Default cube. Right: After applying Craftsman Cabinet Creator.</div>
                         </div>
